--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -1,3 +1,3 @@
-<style>
+{# <style>
   @import url('https://fonts.googleapis.com/css?family=Roboto+Mono:400,500&display=swap');
-</style>
+</style> #}
